[GENERAL HS] fix flashes on mobile (absolute bullshit)

--- a/css/basichomestuck.css
+++ b/css/basichomestuck.css
@@ -294,4 +294,14 @@ body {
 		max-height: unset;
 		width: 90%
 	}
+	
+	#rufflecontainerformobilefuckoff {
+		width: 100%;
+	}
+	
+	#rufflecontainerformobilefuckoff ruffle-embed {
+		width: 100%;
+		height: 100%;
+		display: block;
+	}
 }
